objects/LostRow__c.object
<CustomObject>
    <fields>
        <fullName>APOAccountId__c</fullName>
        <label>APOAccountId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOAccountName__c</fullName>
        <label>APOAccountName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOOppId__c</fullName>
        <label>APOOppId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LostRows</relationshipLabel>
        <relationshipName>LostRows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>LostRows</relationshipLabel>
        <relationshipName>LostRows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Additional_Notes__c</fullName>
        <label>Lost Reason Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail__c</fullName>
        <label>Lost Reason Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lost</label>
        <referenceTo>Lost__c</referenceTo>
        <relationshipLabel>LostRows</relationshipLabel>
        <relationshipName>LostRows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedJoin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessedJoin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessedPostToWS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessedPostToWS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>SKU__c</referenceTo>
        <relationshipLabel>LostRows</relationshipLabel>
        <relationshipName>LostRows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>LostRow</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LostRow Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LostRows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>